Piechart generated with angular service

--- a/angular-statistics/src/app/app.component.html
+++ b/angular-statistics/src/app/app.component.html
@@ -17,7 +17,6 @@
     <div class="main">
         <h1>Statistics</h1>
         <app-barcharts></app-barcharts>
-<app-piecharts></app-piecharts>
-        
+        <app-piecharts class="piecharts"></app-piecharts>  
 </div>
 </div>
