--- a/angular-statistics/src/app/piecharts/piecharts.component.html
+++ b/angular-statistics/src/app/piecharts/piecharts.component.html
@@ -1,4 +1,4 @@
 <div class="piecharts">
-    <div class = "piechart" id="Age_chart_div"></div>
-    <div class = "piechart" id="Movie_chart_div"></div>
+    <div id="{{elementId}}"></div>
+    <div id="{{elementId}}"></div>
 </div>
