--- a/angular-statistics/src/app/app.component.html
+++ b/angular-statistics/src/app/app.component.html
@@ -1,22 +1,13 @@
+<div class="layout">
+        <div class="l-left">
+<app-homebar></app-homebar></div>
 <div class="l-right">
     <div class="top-bar">
-        <form action="" class="left">
-            <a href="#" class="toggle-menu topm2"><i class="material-icons">menu</i></a>
-            <img src="assets/icons/icon_search.svg" alt="" class="icon">
-            <input type="text" id="input_search" placeholder="Search">
-        </form>
-        <div class="right">
-            <img src="assets/icons/icon_notification.svg" alt="" class="notif-ico">
-            <a href="#" class="user-menu">
-                John Doe
-                <img src="assets/icons/icon_down-arrow-small.svg" alt="" class="arrow">
-
-            </a>
-        </div>
+        <app-headerbar></app-headerbar>
     </div>
     <div class="main">
         <h1>Statistics</h1>
         <app-barcharts></app-barcharts>
-        <app-piecharts class="piecharts"></app-piecharts>  
+        <app-piecharts></app-piecharts>  
 </div>
 </div>
