fixed a bug relating to the homebar

--- a/Settings/src/app/homebar/homebar.component.html
+++ b/Settings/src/app/homebar/homebar.component.html
@@ -17,7 +17,7 @@
         <img src="assets/icons/icon_Invoices-1.svg" alt="" class="ico">
         Cinema Rooms
     </a>
-    <a href="Program.html" class="menu-item active">
+    <a href="Program.html" class="menu-item ">
         <img src="assets/icons/icon_calendar-1.svg" alt="" class="ico">
         Program
     </a>
