--- a/Settings/src/app/app.component.css
+++ b/Settings/src/app/app.component.css
@@ -23,7 +23,8 @@ body {
 .layout .l-left {
   flex-basis: 220px;
   background: var(--color-prim);
-  color: #333;
+  background-color: #414141;
+    color: #333;
   position: relative;
 }
 .layout .l-right {
