added add room buttons

--- a/AngularOnePage/src/app/admin/addroom/addroom.component.html
+++ b/AngularOnePage/src/app/admin/addroom/addroom.component.html
@@ -19,7 +19,8 @@
     <input type="file" accept="image/*" required name="room-image-3">
     <p>Room Image | 4</p>
     <input type="file" accept="image/*" required name="room-image-4">
-    
+    <button class="buttons-rooms" id="modal-button-add" type="submit">Add Room</button>
+    <button class="buttons-rooms" type="button" >Back to Rooms</button>
 </form>
   </div>
   </div>
